be-1: add monitored service api